Changed HTML to replace forms with divs and inputs with buttons, this stopped reloading issue

--- a/quiz.html
+++ b/quiz.html
@@ -14,9 +14,9 @@
       <p id='Question'>
       </p>
     </div>
-    <form id='Answers'>
-    </form>
-    <form id='NewQuestion'
-      <input class='button' id='ask-new-question' type="button" value="Ask a new question" onclick="getQuestion()"/>
-    </form>
+    <div id='Answers'>
+    </div>
+    <div id='NewQuestion'
+      <button class='button' id='ask-new-question' type="button" value="Ask a new question" onclick="getQuestion()"/>
+    </div>
 </html>
