--- a/quiz.html
+++ b/quiz.html
@@ -17,6 +17,6 @@
     <div id='Answers'>
     </div>
     <div id='NewQuestion'
-      <button class='button' id='ask-new-question' type="button" value="Ask a new question" onclick="getQuestion()"/>
+      <button class='button' id='ask-new-question' type="button" onclick="getQuestion()">Ask a new question</button>
     </div>
 </html>
