Now tracks right and wrong score

--- a/quiz.html
+++ b/quiz.html
@@ -11,7 +11,11 @@
   </header>
   <body>
     <div id='QuestionBox'>
+      <p id='Correct'>
+      </p>
       <p id='Question'>
+      </p>
+      <p id='Wrong'>
       </p>
     </div>
     <div id='Answers'>
