Correct/Incorrect answers now more clearly labeled.

--- a/quiz.html
+++ b/quiz.html
@@ -11,12 +11,18 @@
   </header>
   <body>
     <div id='QuestionBox'>
-      <p id='Correct'>
-      </p>
+      <div class='scoreLabel'>
+        <h5>Correct</h5>
+        <p id='Correct'>
+        </p>
+      </div>
       <p id='Question'>
       </p>
-      <p id='Wrong'>
-      </p>
+      <div class='scoreLabel'>
+        <h5>Wrong</h5>
+        <p id='Wrong'>
+        </p>
+      </div>
     </div>
     <div id='Answers'>
     </div>
