Made score areas maybe a little nicer

--- a/quiz.html
+++ b/quiz.html
@@ -13,14 +13,14 @@
     <div id='QuestionBox'>
       <div class='scoreLabel'>
         <h5>Correct</h5>
-        <p id='Correct'>
+        <p id='Correct' class='score'>
         </p>
       </div>
       <p id='Question'>
       </p>
       <div class='scoreLabel'>
         <h5>Wrong</h5>
-        <p id='Wrong'>
+        <p id='Wrong' class='score'>
         </p>
       </div>
     </div>
