Module refactor now working

--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,6 @@
     <title>A quiz about Fate/Grand Order</title>
     <link href="quiz.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type = "text/javascript" src="quiz.js"></script>
   </head>
   <header>
     <h1>Fate/Grand Order Quiz!</h1>
@@ -26,7 +25,9 @@
     </div>
     <div id='Answers'>
     </div>
-    <div id='NewQuestion'
-      <button class='button' id='ask-new-question' type="button" onclick="getQuestion()">Ask a new question</button>
+    <div id='NewQuestion'>
+      <button class='button' id='ask-new-question' type="button">Ask a new question</button>
     </div>
+    <script type = "text/javascript" src="quiz.js"></script>
+  </body>
 </html>
